# cythonbuilder

./: .coveragerc  .drone.yml  .gitignore  .helpy  LICENSE.txt  README.md  __oldpyproject.toml  gittag.sh  mani.py  primecounter.cp39-win_amd64.pyd  pyproject.toml  readme.md  setup.cfg  setup.py  stats.json  stats.txt  test.cp39-win_amd64.pyd
.github/workflows/: release.yml  tests.yml
cythonbuilder/: __init__.py  __main__.py  __version__.py  appsettings.py  cli.py  config.py  cython_builder.py  cythonbuilder.py  definitions.py  helpers.py  logs.py  pyigenerator.py  pyproject.toml  services.py  services_weg.py
cythonbuilder/util/: log.py
doc/: CHANGELOG.md  example.md  publishing.md  test.md
ext/: easy.cp39-win_amd64.pyd  primecounter.cp39-win_amd64.pyd  test.cp39-win_amd64.pyd
ext/annotations/: class_with_methods.html  dingen.html  easy.html  eeee.html  primecounter.html
ext/pyxfiles/: primecounter.pyx  test.c  test.html  test.pyx
ext/pyxfiles/somesubproject/: easy.c  easy.pyx
src/cythonbuilder/: __init__.py  cli.py  cython_builder.py  definitions.py  helpers.py  logs.py  pyigenerator.py  services.py
stats/: coverage.json
test/: test_cybuilder.py  test_functions.py  test_logger.py  test_pyi_generator.py
test/ext/pyxfiles/: test_np_needed.c  test_np_needed.html  test_np_needed.pyx
test/files_for_testing/: built_c_file.c
test/testfiles/: different_file.pyx  test_no_np.pyx  test_np_needed.pyx
