[tool.poetry]
name = "cythonbuilder"
version = "0.0.19"
description = "CythonBuilder; automated compiling and packaging of Cython code"
authors = ["Mike Huls <m.huls@datanext.nl>"]
license = "MIT"
readme = "README.md"
keywords=["pypi", "Cython", "setup", "packaging", "compilation"]

classifiers = [
    "Environment :: Console",
    "Framework :: Flake8",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Documentation",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Quality Assurance",
]
include = [
    "LICENSE",
]

[tool.poetry.dependencies]
python = "^3.9"
typer = "^0.7.0"
cython = "^0.29.28"


[tool.poetry.urls]
"Homepage" = "https://github.com/mike-huls/cythonbuilder"
"Bug Tracker" = "https://github.com/mike-huls/cythonbuilder/issues"
"Documentation" = "https://github.com/mike-huls/cythonbuilder/blob/main/README.md/"
"Source" = "https://github.com/mike-huls/cythonbuilder/"
"Say Thanks!" = "https://www.buymeacoffee.com/mikehuls"

[tool.poetry.scripts]
cythonbuilder = "cythonbuilder.cli:app"
cybuilder = "cythonbuilder.cli:app"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
